# simproc

./: .gitignore  Cargo.toml  README.md
examples/: hello-dude.asm  hello.asm
src/: inst.rs  lib.rs  sp80.rs  sp80_test.rs
src/cpu/: clock.rs  cpu.rs  exec.rs  io.rs  mod.rs  reg.rs
src/inst/: inst.rs  mod.rs  ops.rs
src/mem/: addr.rs  bank.rs  mem.rs  mod.rs  page.rs
src/sp80/: args.rs  inst.rs  mod.rs  ops.rs
