[package]

name = "simproc"
version = "0.1.0"
authors = ["Alvaro Polo <apoloval@gmail.com>"]

[dependencies]
byteorder = "*"
docopt = "*"
regex = "*"
rustc-serialize = "*"
time = "*"

[dev-dependencies]
quickcheck = "*"

[lib]
name = "simproc"

[[bin]]
name = "spasm"
path = "src/bin/spasm/main.rs"

[[bin]]
name = "spm"
path = "src/bin/spm/main.rs"
